--- a/Wrapper/pom.xml
+++ b/Wrapper/pom.xml
@@ -100,6 +100,12 @@
 			<artifactId>jsoup</artifactId>
 			<version>1.7.3</version>
 		</dependency>
+		<dependency>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20141113</version>
+		</dependency>
+
 	</dependencies>
 	<build>
 		<plugins>
